Fixed font size for the h3 elements inside of the tooltip boxes in the companies section as it was far too large

--- a/SCSS/components/_companies.scss
+++ b/SCSS/components/_companies.scss
@@ -59,6 +59,7 @@
             // ================================================================================
             & > h3{
                 padding: 10px 10px;
+                font-size:1.125rem;
             }
             & > hr{
                 opacity:100%;
